// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GnomesContainer filters the population 1`] = `
<div>
  <div>
    <input
      data-testid="GnomeFilter"
      name="GnomeFilter"
      placeholder="Type to filter"
      value=""
    />
  </div>
  <div
    data-testid="GnomeList"
  >
    <div
      data-testid="Gnome-1"
      weight="35.279167"
    >
      <h1
        data-testid="name"
      >
        Lola
      </h1>
      <img
        alt="Lola"
        data-testid="thumbnail"
        src="http://www.publicdomainpictures.net/pictures/120000/nahled/white-hen.jpg"
        width="200px"
      />
      <div>
        <div>
          <h1>
            Friends #
          </h1>
          <span>
            0
          </span>
        </div>
        <div>
          <h1>
            Professions #
          </h1>
          <span>
            6
          </span>
        </div>
        <button>
          OPEN
        </button>
      </div>
    </div>
    <div
      data-testid="Gnome-2"
      weight="35.88665"
    >
      <h1
        data-testid="name"
      >
        Lucia
      </h1>
      <img
        alt="Lucia"
        data-testid="thumbnail"
        src="http://www.publicdomainpictures.net/pictures/30000/nahled/maple-leaves-background.jpg"
        width="200px"
      />
      <div>
        <div>
          <h1>
            Friends #
          </h1>
          <span>
            1
          </span>
        </div>
        <div>
          <h1>
            Professions #
          </h1>
          <span>
            3
          </span>
        </div>
        <button>
          OPEN
        </button>
      </div>
    </div>
    <div
      data-testid="Gnome-3"
      weight="40.97596"
    >
      <h1
        data-testid="name"
      >
        Paco
      </h1>
      <img
        alt="Paco"
        data-testid="thumbnail"
        src="http://www.publicdomainpictures.net/pictures/10000/nahled/1-1275919724d1Oh.jpg"
        width="200px"
      />
      <div>
        <div>
          <h1>
            Friends #
          </h1>
          <span>
            2
          </span>
        </div>
        <div>
          <h1>
            Professions #
          </h1>
          <span>
            6
          </span>
        </div>
        <button>
          OPEN
        </button>
      </div>
    </div>
    <div
      data-testid="Gnome-4"
      weight="43.506973"
    >
      <h1
        data-testid="name"
      >
        Nestor
      </h1>
      <img
        alt="Nestor"
        data-testid="thumbnail"
        src="http://www.publicdomainpictures.net/pictures/10000/nahled/zebra-head-11281366876AZ3M.jpg"
        width="200px"
      />
      <div>
        <div>
          <h1>
            Friends #
          </h1>
          <span>
            2
          </span>
        </div>
        <div>
          <h1>
            Professions #
          </h1>
          <span>
            2
          </span>
        </div>
        <button>
          OPEN
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`GnomesContainer filters the population 2`] = `
<div>
  <div>
    <input
      data-testid="GnomeFilter"
      name="GnomeFilter"
      placeholder="Type to filter"
      value="P"
    />
  </div>
  <div
    data-testid="GnomeList"
  >
    <div
      data-testid="Gnome-3"
      weight="40.97596"
    >
      <h1
        data-testid="name"
      >
        Paco
      </h1>
      <img
        alt="Paco"
        data-testid="thumbnail"
        src="http://www.publicdomainpictures.net/pictures/10000/nahled/1-1275919724d1Oh.jpg"
        width="200px"
      />
      <div>
        <div>
          <h1>
            Friends #
          </h1>
          <span>
            2
          </span>
        </div>
        <div>
          <h1>
            Professions #
          </h1>
          <span>
            6
          </span>
        </div>
        <button>
          OPEN
        </button>
      </div>
    </div>
  </div>
</div>
`;
